# pgl

./: .gitignore  CLAUDE.md  Doxyfile  MONOTONECHAIN_PLAN.md  README.md  halfplane-intersection-plan.md  todo_test.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  pages.yml  tests.yml
benchmark/: README.md  record.sh  run_benchmark.sh
benchmark/algorithms/: bentleyottmann.cpp  shapetree.cpp  triangulation-polygon.cpp  triangulation.cpp
benchmark/convex/: convex_convex.cpp  convex_point.cpp  triangle-convex_point.cpp  triangle-convex_triangle-convex.cpp
benchmark/dashboard/: app.js  index.html  style.css
benchmark/history/: bentleyottmann.jsonl  convex-polygon_convex-polygon.jsonl  convex_convex.jsonl  convex_point.jsonl  line_line.jsonl  line_point.jsonl  polygon_polygon.jsonl  ray_point.jsonl  ray_ray.jsonl  rectangle_point.jsonl  rectangle_rectangle.jsonl  segment-shape_segment-shape.jsonl  segment_point.jsonl  segment_segment.jsonl  shapetree.jsonl  triangle-convex_point.jsonl  triangle-convex_triangle-convex.jsonl  triangle-shape_triangle-shape.jsonl  triangle_point.jsonl  triangle_triangle.jsonl  triangulation.jsonl  (+1 more)
doc/: README.md  algorithms.md  canvas.md  data_structures.md  predicates.md  project_structure.md  shape_methods.md  shapes.md  todo.md  types.md
examples/: Makefile  example1.cpp  example2.cpp  example3.cpp  example_shapetree.cpp  example_triangulation.cpp  example_triangulation2.cpp
include/: pgl.hpp
tests/: find_uninstantiated.py  run_tests.sh
tests/interactive/: CMakeLists.txt  README.md  main.cpp  resources.qrc
(+546 files in other folders)
